--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,11 @@ authors = [
 ]
 license = {text = "MIT License"}
 description = "Document your Python projects using generative AI"
-requires-python = ">=3.9,<3.12"
+requires-python = ">=3.9"
 dynamic = ["version", "readme", "dependencies"]
 
 [project.urls]
-Source = 'https://github.com/DivergerThinking/pycodedoc'
-Homepage = 'https://diverger.ai'
+Source = 'https://github.com/WN-Onboarding/pycodedoc_acn'
 
 [project.scripts]
 pycodedoc = 'pycodedoc.cli:app'
